--- a/index.html
+++ b/index.html
@@ -6,12 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="container">
+
+            <img src="img/logo.svg" alt="logo" class="logo">
+
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Explore</a></li>
+                    <li><a href="#">Articles</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Newsletter</a></li>
+                </ul>
+            </nav>
+
+            <div class="hamburger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+
+        </div>
+    </header>
     <main>
         <p>Explore by</p>
         <button>Area</button>
@@ -50,6 +73,7 @@
         </section>
     </main>
     <footer></footer>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
