adding styletile properties

--- a/index.html
+++ b/index.html
@@ -12,33 +12,11 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-
-            <img src="img/logo.svg" alt="logo" class="logo">
-
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Explore</a></li>
-                    <li><a href="#">Articles</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Newsletter</a></li>
-                </ul>
-            </nav>
-
-            <div class="hamburger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-
-        </div>
-    </header>
+    <header></header>
     <main>
         <p>Explore by</p>
-        <button>Area</button>
-        <button>Category</button>
+        <button class="landing-btn unselected">Area</button>
+        <button class="landing-btn selected">Category</button>
         <section class="category cards-grid">
             <section class="article-card">
                 <img src="" alt="">
