--- a/index.html
+++ b/index.html
@@ -12,22 +12,44 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="menu-container">
+
+            <img src="img/logo.svg" alt="logo" class="logo">
+
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="category-list.html">Explore</a></li>
+                    <li><a href="article.html">Articles</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="newsletter.html">Newsletter</a></li>
+                </ul>
+            </nav>
+
+            <div class="hamburger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+
+        </div>
+    </header>
     <main>
         <p>Explore by</p>
         <button class="landing-btn unselected">Area</button>
         <button class="landing-btn selected">Category</button>
-        <section class="category cards-grid">
+        <section class="landing-category cards-grid">
             <section class="article-card">
-                <img src="" alt="">
+                <div class="ldn-card-cont"><img src="img/nyhavn-cat.jpg" alt=""></div>
                 <h2 class="card-title">Title</h2>
             </section>
             <section class="article-card">
-                <img src="" alt="">
+                <div class="ldn-card-cont"><img src="img/parks-cat.jpg" alt=""></div>
                 <h2 class="card-title">Title</h2>
             </section>
             <section class="article-card">
-                <img src="" alt="">
+                <div class="ldn-card-cont"><img src="img/coffee-cat.jpg" alt=""></div>
                 <h2 class="card-title">Title</h2>
             </section>
         </section>
@@ -37,15 +59,15 @@
         <h1>New features</h1>
         <section class="cards-grid">
             <section class="article-card">
-                <img src="" alt="">
+                <div class="ldn-card-cont"><img src="img/nyhavn-cat.jpg" alt=""></div>
                 <h2 class="card-title">Title</h2>
             </section>
             <section class="article-card">
-                <img src="" alt="">
+                <div class="ldn-card-cont"><img src="img/parks-cat.jpg" alt=""></div>
                 <h2 class="card-title">Title</h2>
             </section>
             <section class="article-card">
-                <img src="" alt="">
+                <div class="ldn-card-cont"><img src="img/coffee-cat.jpg" alt=""></div>
                 <h2 class="card-title">Title</h2>
             </section>
         </section>
