--- a/category-list.html
+++ b/category-list.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="style.css">
     <title>Categories</title>
 </head>
 <body>
@@ -33,6 +34,73 @@
     </div>
 </header>
     
+<main>
+    <section class="categories">
+
+        <article class="category">
+            <a href="#">
+                <img src="img/mustsee.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Must-see places</h2>
+            </a>
+        </article>
+
+        <article class="category">
+            <a href="#">
+                <img src="img/insta.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Insta spots</h2>
+            </a>
+        </article>
+
+        <article class="category">
+            <a href="#">
+                <img src="img/historic.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Historical sites</h2>
+            </a>
+        </article>
+
+        <article class="category">
+            <a href="#">
+                <img src="img/architecture.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Architecture objects</h2>
+            </a>
+        </article>
+
+        <article class="category">
+            <a href="#">
+                <img src="img/museum.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Museums</h2>
+            </a>
+        </article>
+
+        <article class="category">
+            <a href="#">
+                <img src="img/park.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Parks and nature</h2>
+            </a>
+        </article>
+
+        <article class="category">
+            <a href="#">
+                <img src="img/entertainment.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Entertainment</h2>
+            </a>
+        </article>
+
+        <article class="category">
+            <a href="#">
+                <img src="img/coffee.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Coffee shops</h2>
+            </a>
+        </article>
+
+        <article class="category" id="barcategory">
+            <a href="#">
+                <img src="img/bar.png" alt="" class="categoryimage">
+                <h2 class="categoryname">Bars and nightlife</h2>
+            </a>
+        </article>
+</main>
+
 <script src="nav.js"></script>
 
 </body>
