--- a/article.html
+++ b/article.html
@@ -6,31 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Article page</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
     <header>
       <div class="container">
-
-        <img src="img/logo.svg" alt="logo" class="logo">
+        <img src="img/logo.svg" alt="logo" class="logo" />
 
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Explore</a></li>
-                <li><a href="#">Articles</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Newsletter</a></li>
-            </ul>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Explore</a></li>
+            <li><a href="#">Articles</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Newsletter</a></li>
+          </ul>
         </nav>
 
         <div class="hamburger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
         </div>
-
-    </div>
+      </div>
       <div class="header-img"></div>
       <div class="article-container"><h1>TITLE - COPENHAGEN</h1></div>
     </header>
