work end (02-20). Cards styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,35 @@
         <p>Explore by</p>
         <button class="landing-btn selected" id="area-btn">Area</button>
         <button class="landing-btn unselected" id="category-btn">Category</button>
-        <section class="landing-category cards-grid hidden" id="lnd-cat">
+        <section class="landing-category cards-grid hidden slider" id="lnd-cat">
+            <section class="article-card">
+                <div class="ldn-card-cont"><img src="img/nyhavn-cat.jpg" alt=""></div>
+                <h2 class="card-title">Title</h2>
+            </section>
+            <section class="article-card">
+                <div class="ldn-card-cont"><img src="img/parks-cat.jpg" alt=""></div>
+                <h2 class="card-title">Title</h2>
+            </section>
+            <section class="article-card">
+                <div class="ldn-card-cont"><img src="img/coffee-cat.jpg" alt=""></div>
+                <h2 class="card-title">Title</h2>
+            </section>
+            <section class="article-card">
+                <div class="ldn-card-cont"><img src="img/nyhavn-cat.jpg" alt=""></div>
+                <h2 class="card-title">Title</h2>
+            </section>
+            <section class="article-card">
+                <div class="ldn-card-cont"><img src="img/parks-cat.jpg" alt=""></div>
+                <h2 class="card-title">Title</h2>
+            </section>
+            <section class="article-card">
+                <div class="ldn-card-cont"><img src="img/coffee-cat.jpg" alt=""></div>
+                <h2 class="card-title">Title</h2>
+            </section>
+            <section class="article-card">
+                <div class="ldn-card-cont"><img src="img/coffee-cat.jpg" alt=""></div>
+                <h2 class="card-title">Title</h2>
+            </section>
             <section class="article-card">
                 <div class="ldn-card-cont"><img src="img/nyhavn-cat.jpg" alt=""></div>
                 <h2 class="card-title">Title</h2>
@@ -54,6 +82,7 @@
                 <h2 class="card-title">Title</h2>
             </section>
         </section>
+
         <section id="lnd-map">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                 y="0px" viewBox="0 0 999.9 999.9" style="enable-background:new 0 0 999.9 999.9;" xml:space="preserve"
@@ -249,7 +278,8 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla repellendus nisi, sunt
                             consectetur
                             ipsa velit
-                            repudiandae aperiam modi quisquam nihil nam asperiores doloremque mollitia dolor deleniti
+                            repudiandae aperiam modi quisquam nihil nam asperiores doloremque mollitia dolor
+                            deleniti
                             quibusdam
                             nemo
                             commodi ab.</p>
@@ -260,6 +290,7 @@
                 </div>
             </div>
         </section>
+        <section class="lnd-discover"></section>
         <h1>New features</h1>
         <section class="cards-grid">
             <section class="article-card">
