--- a/newsletter.html
+++ b/newsletter.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/nav.css" />
     <title>Newsletter</title>
   </head>
   <body class="newsletter-page">
+    <header>
+      <div class="container">
+        <img src="img/logo.svg" alt="logo" class="logo" />
+
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Explore</a></li>
+            <li><a href="#">Articles</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Newsletter</a></li>
+          </ul>
+        </nav>
+
+        <div class="hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </div>
+    </header>
     <main class="newsletter-main">
       <h1 class="news-heading">
         Join us today and let us inspire you on the journey to become a true
