--- a/article.html
+++ b/article.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="header-img"></div>
-      <div class="article-container"><h1>TITLE - COPENHAGEN</h1></div>
+      <div class="article-container"><h1>ARTICLE- COPENHAGEN</h1></div>
     </header>
 
     <p class="short-description">
