First iteration index

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                         <h2 class="card-title">Title</h2>
                     </section>
                 </a>
+                <a href="article.html">
+                    <section class="article-card">
+                        <div class="ldn-card-cont"><img src="img/parks-cat.jpg" alt=""></div>
+                        <h2 class="card-title">Title</h2>
+                    </section>
+                </a>
             </section>
 
             <section id="lnd-map">
@@ -329,10 +335,17 @@
                         <h2 class="card-title">Title</h2>
                     </section>
                 </a>
+                <a href="article.html">
+                    <section class="article-card">
+                        <div class="ldn-card-cont"><img src="img/nyhavn-cat.jpg" alt=""></div>
+                        <h2 class="card-title">Title</h2>
+                    </section>
+                </a>
             </section>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
     <script src="js/nav.js"></script>
     <script src="js/map.js"></script>
     <script src="js/index.js"></script>
