--- a/category-list.html
+++ b/category-list.html
@@ -19,11 +19,11 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Explore</a></li>
-                    <li><a href="#">Articles</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Newsletter</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Explore</a></li>
+                    <li><a href="category-list.html">Articles</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="newsletter.html">Newsletter</a></li>
                 </ul>
             </nav>
 
@@ -37,74 +37,74 @@
     </header>
 
     </div>
-</header>
-    
-<main>
-    <section class="categories">
+    </header>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/mustsee.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Must-see places</h2>
-            </a>
-        </article>
+    <main>
+        <section class="categories">
 
-        <article class="category">
-            <a href="#">
-                <img src="img/insta.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Insta spots</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/mustsee.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Must-see places</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/historic.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Historical sites</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/insta.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Insta spots</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/architecture.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Architecture objects</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/historic.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Historical sites</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/museum.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Museums</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/architecture.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Architecture objects</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/park.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Parks and nature</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/museum.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Museums</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/entertainment.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Entertainment</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/park.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Parks and nature</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/coffee.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Coffee shops</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/entertainment.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Entertainment</h2>
+                </a>
+            </article>
 
-        <article class="category" id="barcategory">
-            <a href="#">
-                <img src="img/bar.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Bars and nightlife</h2>
-            </a>
-        </article>
-</main>
+            <article class="category">
+                <a href="#">
+                    <img src="img/coffee.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Coffee shops</h2>
+                </a>
+            </article>
+
+            <article class="category" id="barcategory">
+                <a href="#">
+                    <img src="img/bar.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Bars and nightlife</h2>
+                </a>
+            </article>
+    </main>
 
     <script src="js/nav.js"></script>
 
