--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="category-list.html">Explore</a></li>
-                    <li><a href="article.html">Articles</a></li>
+                    <li><a href="category-list.html">Articles</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="newsletter.html">Newsletter</a></li>
                 </ul>
