--- a/newsletter.html
+++ b/newsletter.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <title>Newsletter</title>
-  </head>
-  <body class="newsletter-page">
-    <header>
-      <div class="container">
-        <img src="img/logo.svg" alt="logo" class="logo" />
 
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Explore</a></li>
-            <li><a href="#">Articles</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Newsletter</a></li>
-          </ul>
-        </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/nav.css" />
+  <title>Newsletter</title>
+</head>
 
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
+<body class="newsletter-page">
+  <header>
+    <div class="container">
+      <img src="img/logo.svg" alt="logo" class="logo" />
+
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="category-list.html">Explore</a></li>
+          <li><a href="category-list.html">Articles</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="">Newsletter</a></li>
+        </ul>
+      </nav>
+
+      <div class="hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
       </div>
-    </header>
-    <main class="newsletter-main">
-      <h1 class="news-heading">
-        Join us today and let us inspire you on the journey to become a true
-        Copenhagener.
-      </h1>
-      <form class="news-form">
-        <table class="register-form">
-          <tr>
-            <td>Email :</td>
-            <td>
-              <input class="e-mail" type="email" name="" />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input class="sub-button" type="submit" value="SIGN UP" name="" />
-            </td>
-          </tr>
-        </table>
-      </form>
-    </main>
-    <footer></footer>
-  </body>
+    </div>
+  </header>
+  <main class="newsletter-main">
+    <h1 class="news-heading">
+      Join us today and let us inspire you on the journey to become a true
+      Copenhagener.
+    </h1>
+    <form class="news-form">
+      <table class="register-form">
+        <tr>
+          <td>Email :</td>
+          <td>
+            <input class="e-mail" type="email" name="" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input class="sub-button" type="submit" value="SIGN UP" name="" />
+          </td>
+        </tr>
+      </table>
+    </form>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
