--- a/category-list.html
+++ b/category-list.html
@@ -15,15 +15,14 @@
     <header>
         <div class="container">
 
-            <img src="img/logo.svg" alt="logo" class="logo">
+            <a href="index.html"><img src="img/logo.svg" alt="logo" class="logo"></a>
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Explore</a></li>
-                    <li><a href="#">Articles</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Newsletter</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="newsletter.html">Newsletter</a></li>
                 </ul>
             </nav>
 
@@ -40,6 +39,9 @@
 </header>
     
 <main>
+
+    <h1>Categories</h1>
+
     <section class="categories">
 
         <article class="category">
