Fixed desktop nav bar

--- a/about.html
+++ b/about.html
@@ -12,15 +12,16 @@
 
 <body>
   <header>
-    <div class="container">
-      <img src="img/logo.svg" alt="logo" class="logo" />
+    <div class="menu-container">
+
+      <img src="img/logo.svg" alt="logo" class="logo">
 
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="category-list.html">Explore</a></li>
           <li><a href="category-list.html">Articles</a></li>
-          <li><a href="">About</a></li>
+          <li><a href="#">About</a></li>
           <li><a href="newsletter.html">Newsletter</a></li>
         </ul>
       </nav>
@@ -30,6 +31,7 @@
         <div class="line2"></div>
         <div class="line3"></div>
       </div>
+
     </div>
   </header>
   <div class="about-heading-wrapper">
