--- a/category-list.html
+++ b/category-list.html
@@ -13,9 +13,9 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="menu-container">
 
-            <a href="index.html"><img src="img/logo.svg" alt="logo" class="logo"></a>
+            <img src="img/logo.svg" alt="logo" class="logo">
 
             <nav>
                 <ul>
@@ -37,77 +37,77 @@
     </header>
 
     </div>
-</header>
-    
-<main>
+    </header>
 
-    <h1>Categories</h1>
+    <main>
 
-    <section class="categories">
+        <h1>Categories</h1>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/mustsee.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Must-see places</h2>
-            </a>
-        </article>
+        <section class="categories">
 
-        <article class="category">
-            <a href="#">
-                <img src="img/insta.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Insta spots</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/mustsee.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Must-see places</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/historic.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Historical sites</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/insta.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Insta spots</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/architecture.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Architecture objects</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/historic.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Historical sites</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/museum.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Museums</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/architecture.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Architecture objects</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/park.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Parks and nature</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/museum.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Museums</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/entertainment.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Entertainment</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/park.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Parks and nature</h2>
+                </a>
+            </article>
 
-        <article class="category">
-            <a href="#">
-                <img src="img/coffee.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Coffee shops</h2>
-            </a>
-        </article>
+            <article class="category">
+                <a href="#">
+                    <img src="img/entertainment.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Entertainment</h2>
+                </a>
+            </article>
 
-        <article class="category" id="barcategory">
-            <a href="#">
-                <img src="img/bar.png" alt="" class="categoryimage">
-                <h2 class="categoryname">Bars and nightlife</h2>
-            </a>
-        </article>
-</main>
+            <article class="category">
+                <a href="#">
+                    <img src="img/coffee.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Coffee shops</h2>
+                </a>
+            </article>
+
+            <article class="category" id="barcategory">
+                <a href="#">
+                    <img src="img/bar.png" alt="" class="categoryimage">
+                    <h2 class="categoryname">Bars and nightlife</h2>
+                </a>
+            </article>
+    </main>
 
     <script src="js/nav.js"></script>
 
