--- a/newsletter.html
+++ b/newsletter.html
@@ -12,8 +12,9 @@
 
 <body class="newsletter-page">
   <header>
-    <div class="container">
-      <img src="img/logo.svg" alt="logo" class="logo" />
+    <div class="menu-container">
+
+      <img src="img/logo.svg" alt="logo" class="logo">
 
       <nav>
         <ul>
@@ -21,7 +22,7 @@
           <li><a href="category-list.html">Explore</a></li>
           <li><a href="category-list.html">Articles</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="">Newsletter</a></li>
+          <li><a href="#">Newsletter</a></li>
         </ul>
       </nav>
 
@@ -30,6 +31,7 @@
         <div class="line2"></div>
         <div class="line3"></div>
       </div>
+
     </div>
   </header>
   <main class="newsletter-main">
