--- a/article.html
+++ b/article.html
@@ -12,13 +12,14 @@
 
 <body>
   <header>
-    <div class="container">
-      <img src="img/logo.svg" alt="logo" class="logo" />
+    <div class="menu-container">
+
+      <img src="img/logo.svg" alt="logo" class="logo">
 
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="category-list.html">Explore</a></li>
+          <li><a href="#">Explore</a></li>
           <li><a href="category-list.html">Articles</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="newsletter.html">Newsletter</a></li>
@@ -30,6 +31,7 @@
         <div class="line2"></div>
         <div class="line3"></div>
       </div>
+
     </div>
     <div class="header-img"></div>
     <div class="article-container">
