--- a/category-list.html
+++ b/category-list.html
@@ -47,64 +47,71 @@
 
         <article class="category">
             <a href="#">
-                <img src="img/mustsee.png" alt="" class="categoryimage">
+                <img src="img/mustsee.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Must-see places</h2>
             </a>
         </article>
 
         <article class="category">
             <a href="#">
-                <img src="img/insta.png" alt="" class="categoryimage">
+                <img src="img/insta.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Insta spots</h2>
             </a>
         </article>
 
         <article class="category">
             <a href="#">
-                <img src="img/historic.png" alt="" class="categoryimage">
+                <img src="img/history.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Historical sites</h2>
             </a>
         </article>
 
         <article class="category">
             <a href="#">
-                <img src="img/architecture.png" alt="" class="categoryimage">
+                <img src="img/architecture.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Architecture objects</h2>
             </a>
         </article>
 
         <article class="category">
             <a href="#">
-                <img src="img/museum.png" alt="" class="categoryimage">
+                <img src="img/museum.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Museums</h2>
             </a>
         </article>
 
         <article class="category">
             <a href="#">
-                <img src="img/park.png" alt="" class="categoryimage">
+                <img src="img/parks.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Parks and nature</h2>
             </a>
         </article>
 
         <article class="category">
             <a href="#">
-                <img src="img/entertainment.png" alt="" class="categoryimage">
+                <img src="img/entertainment.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Entertainment</h2>
             </a>
         </article>
 
         <article class="category">
             <a href="#">
-                <img src="img/coffee.png" alt="" class="categoryimage">
+                <img src="img/coffee.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Coffee shops</h2>
             </a>
         </article>
 
-        <article class="category" id="barcategory">
+        <article class="category">
             <a href="#">
-                <img src="img/bar.png" alt="" class="categoryimage">
+                <img src="img/bars.svg" alt="" class="categoryimage">
                 <h2 class="categoryname">Bars and nightlife</h2>
+            </a>
+        </article>
+
+        <article class="category">
+            <a href="#">
+                <img src="img/outdoor.svg" alt="" class="categoryimage">
+                <h2 class="categoryname">Outdoor activities</h2>
             </a>
         </article>
 </main>
