--- a/category-list.html
+++ b/category-list.html
@@ -55,7 +55,7 @@
         <article class="category">
             <a href="#">
                 <img src="img/insta.svg" alt="" class="categoryimage">
-                <h2 class="categoryname">Insta spots</h2>
+                <h2 class="categoryname">Instagrammable spots</h2>
             </a>
         </article>
 
