--- a/about.html
+++ b/about.html
@@ -1,102 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/nav.css" />
+    <title>About</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/nav.css" />
-  <title>About</title>
-</head>
+  <body>
+    <header>
+      <div class="menu-container">
+        <img src="img/logo.svg" alt="logo" class="logo" />
 
-<body>
-  <header>
-    <div class="menu-container">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="category-list.html">Explore</a></li>
+            <li><a href="category-list.html">Articles</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="newsletter.html">Newsletter</a></li>
+          </ul>
+        </nav>
 
-      <img src="img/logo.svg" alt="logo" class="logo">
-
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="category-list.html">Explore</a></li>
-          <li><a href="category-list.html">Articles</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="newsletter.html">Newsletter</a></li>
-        </ul>
-      </nav>
-
-      <div class="hamburger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
+        <div class="hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
       </div>
-
+    </header>
+    <div class="about-heading-wrapper">
+      <h1 class="about-wrap-heading">About us</h1>
     </div>
-  </header>
-  <div class="about-heading-wrapper">
-    <h1 class="about-wrap-heading">About Us</h1>
-  </div>
-  <main class="about-main">
-    <div class="column-about-content">
-      <h2 class="about-heading">CONCEPT</h2>
-      <p class="about-p">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
-        laoreet ac lacus eu dignissim. Sed dignissim, sem id sollicitudin
-        faucibus, justo neque pellentesque nisl, vel faucibus neque felis
-        vehicula magna. Ut non pulvinar purus. Maecenas nec nulla non dolor
-        tempor dictum ut vel risus. Vivamus neque diam, ullamcorper at leo
-        vel, condimentum iaculis odio. Aenean sapien metus, elementum id
-        mattis et, mollis in ex. Nunc a sodales diam. Curabitur at velit id
-        massa accumsan sollicitudin. Suspendisse viverra gravida suscipit.
-        Fusce in est malesuada, venenatis elit eu, viverra dolor. Ut sed
-        libero nec nulla ultricies sodales.
-      </p>
-      <h2 class="about-heading">PURPOSE</h2>
-      <p class="about-p">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
-        laoreet ac lacus eu dignissim. Sed dignissim, sem id sollicitudin
-        faucibus, justo neque pellentesque nisl, vel faucibus neque felis
-        vehicula magna. Ut non pulvinar purus. Maecenas nec nulla non dolor
-        tempor dictum ut vel risus. Vivamus neque diam, ullamcorper at leo
-        vel, condimentum iaculis odio. Aenean sapien metus, elementum id
-        mattis et, mollis in ex. Nunc a sodales diam. Curabitur at velit id
-        massa accumsan sollicitudin. Suspendisse viverra gravida suscipit.
-        Fusce in est malesuada, venenatis elit eu, viverra dolor. Ut sed
-        libero nec nulla ultricies sodales.
-      </p>
-      <img class="about-page-image" src="img/the-round-tower-2762438_1920.jpg" alt="text" />
-      <h3 class="about-subhead">Get in touch</h3>
-      <form class="get-in-touch">
-        <table class="fill-form">
-          <tr>
-            <td>First name :</td>
-            <td>
-              <input type="text" name="" />
-            </td>
-          </tr>
-          <tr>
-            <td>Last name :</td>
-            <td>
-              <input type="text" name="" />
-            </td>
-          </tr>
-          <tr>
-            <td>Email :</td>
-            <td>
-              <input class="email-sign" type="email" name="" />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input class="submit-button" type="Submit" value="Submit" name="" />
-            </td>
-          </tr>
-        </table>
-      </form>
-    </div>
-  </main>
-  <footer></footer>
-</body>
-
+    <main class="about-main">
+      <div class="column-about-content">
+        <h2 class="about-heading">CONCEPT</h2>
+        <p class="about-p">
+          We are Justina, Agata, Maria and Caroline. Curious, adventurous and
+          always in pursuit of great sights, events and happenings in the
+          bustling city of Copenhagen. We have created this project website as a
+          way for us to share all the best the city has to offer to any other
+          foreign newcomers who needs a reliable, direct source for all the
+          relevant information needed, displayed in a simple format.
+        </p>
+        <h2 class="about-heading">PURPOSE</h2>
+        <p class="about-p">
+          We want to give you the inside scoop on the latest hot spots, hidden
+          gems and all the other wonderful things there is to see in the city,
+          through the eyes of a true local. Arriving in a new country can be an
+          at times overwhelming and daunting task, and it is in our interest to
+          make that journey and transition a bit easier. We hope you'll all find
+          our site useful and can help bring you one step closer to understand
+          the community, cutlure and gain you many newcomers one of a kind and
+          memorable experiences in Copenhagen.
+        </p>
+        <img
+          class="about-page-image"
+          src="img/the-round-tower-2762438_1920.jpg"
+          alt="text"
+        />
+        <h3 class="about-subhead">Get in touch</h3>
+        <form class="get-in-touch">
+          <table class="fill-form">
+            <tr>
+              <td>First name :</td>
+              <td>
+                <input type="text" name="" />
+              </td>
+            </tr>
+            <tr>
+              <td>Last name :</td>
+              <td>
+                <input type="text" name="" />
+              </td>
+            </tr>
+            <tr>
+              <td>Email :</td>
+              <td>
+                <input class="email-sign" type="email" name="" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <input
+                  class="submit-button"
+                  type="Submit"
+                  value="Submit"
+                  name=""
+                />
+              </td>
+            </tr>
+          </table>
+        </form>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
