--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
           <div class="dropdown">
                   <button class="explore">Explore</button>
                       <ul>
-                              <li><a href="">Categories</a></li>
+                              <li><a href="category-list.html">Categories</a></li>
                               <li><a href="">Areas</a></li>
                               <li><a href="">Discover weekly</a></li>
                       </ul>
