--- a/article.html
+++ b/article.html
@@ -21,7 +21,7 @@
         <div class="dropdown">
                 <button class="explore">Explore</button>
                     <ul>
-                            <li><a href="">Categories</a></li>
+                            <li><a href="category-list.html">Categories</a></li>
                             <li><a href="">Areas</a></li>
                             <li><a href="">Discover weekly</a></li>
                     </ul>
