--- a/newsletter.html
+++ b/newsletter.html
@@ -35,20 +35,11 @@
         Join us today and let us inspire you on the journey to become a true
         Copenhagener.
       </h1>
-      <form class="news-form">
-        <table class="register-form">
-          <tr>
-            <td>Email :</td>
-            <td>
-              <input class="e-mail" type="email" name="" />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input class="sub-button" type="submit" value="SIGN UP" name="" />
-            </td>
-          </tr>
-        </table>
+      <form class="newsletter-signup">
+        <label for="e-mail" class="last-name">E-mail</label>
+        <input id="e-mail" type="text" />
+
+        <button class="send-button">Submit</button>
       </form>
     </main>
     <footer></footer>
