--- a/article.html
+++ b/article.html
@@ -1,113 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Article page</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/nav.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Article page</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/nav.css" />
-</head>
+  <body>
+    <header>
+      <div class="menu-container">
+        <img src="img/logo.svg" alt="logo" class="logo" />
 
-<body>
-  <header>
-    <div class="menu-container">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Explore</a></li>
+            <li><a href="category-list.html">Articles</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="newsletter.html">Newsletter</a></li>
+          </ul>
+        </nav>
 
-      <img src="img/logo.svg" alt="logo" class="logo">
-
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Explore</a></li>
-          <li><a href="category-list.html">Articles</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="newsletter.html">Newsletter</a></li>
-        </ul>
-      </nav>
-
-      <div class="hamburger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
+        <div class="hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
       </div>
+      <div class="header-img"></div>
+      <div class="article-container">
+        <h1>ARTICLE- COPENHAGEN</h1>
+      </div>
+    </header>
 
-    </div>
-    <div class="header-img"></div>
-    <div class="article-container">
-      <h1>ARTICLE- COPENHAGEN</h1>
-    </div>
-  </header>
-
-  <p class="short-description">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-    velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-    est laborum.Lorem ipsum dolor sit amet, consectetur.
-  </p>
-  <article>
-    <section class="image">
-      <img src="img/6e080d35784777.5703c948cde16.png" alt="map" />
-    </section>
-    <section class="card">
-      <div class="img-container">
-        <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
-      </div>
-      <div class="text-column">
-        <h2>Location's name</h2>
-        <p class="address">Address</p>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <a href="#" class="typography-sample category">
-          <p>Category</p>
-        </a>
-      </div>
-    </section>
-    <section class="card">
-      <div class="img-container">
-        <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
-      </div>
-      <div class="text-column">
-        <h2>Location's name</h2>
-        <p class="address">Address</p>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <a href="#" class="typography-sample category">
-          <p>Category</p>
-        </a>
-      </div>
-    </section>
-    <section class="card">
-      <div class="img-container">
-        <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
-      </div>
-      <div class="text-column">
-        <h2>Location's name</h2>
-        <p class="address">Address</p>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <a href="#" class="typography-sample category">
-          <p>Category</p>
-        </a>
-      </div>
-    </section>
-  </article>
-  <script src="js/nav.js"></script>
-</body>
-
+    <p class="short-description">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.Lorem ipsum dolor sit amet, consectetur.
+    </p>
+    <article>
+      <section class="image">
+        <img src="img/6e080d35784777.5703c948cde16.png" alt="map" />
+      </section>
+      <section class="card">
+        <div class="img-container">
+          <img
+            src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg"
+            alt="Copenhagen"
+          />
+        </div>
+        <div class="text-column">
+          <h2>Location's name</h2>
+          <p class="address">Address</p>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="typography-sample category">
+            <p>Category</p>
+          </a>
+        </div>
+      </section>
+      <section class="card">
+        <div class="img-container">
+          <img
+            src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg"
+            alt="Copenhagen"
+          />
+        </div>
+        <div class="text-column">
+          <h2>Location's name</h2>
+          <p class="address">Address</p>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="typography-sample category">
+            <p>Category</p>
+          </a>
+        </div>
+      </section>
+      <section class="card">
+        <div class="img-container">
+          <img
+            src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg"
+            alt="Copenhagen"
+          />
+        </div>
+        <div class="text-column">
+          <h2>Location's name</h2>
+          <p class="address">Address</p>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="typography-sample category">
+            <p>Category</p>
+          </a>
+        </div>
+      </section>
+    </article>
+    <script src="js/nav.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
