--- a/category-list.html
+++ b/category-list.html
@@ -18,19 +18,19 @@
             <img src="img/logo.svg" alt="logo" class="logo">
 
             <nav class="menu">
-                    <button><a href="index.html">Home</a></button>
-                    <div class="dropdown">
-                            <button class="explore">Explore</button>
-                                <ul>
-                                        <li><a href="category-list.html">Categories</a></li>
-                                        <li><a href="">Areas</a></li>
-                                        <li><a href="">Discover weekly</a></li>
-                                </ul>
-                        </div>
-                    <button><a href="about.html">About</a></button>
-                    <button><a href="newsletter.html">Newsletter</a></b>
-                </ul>
-            </nav>
+                <button><a class="menulink" href="index.html">Home</a></button>
+                <div class="dropdown">
+                        <button class="explore">Explore</button>
+                        <ul>
+                          <li><a class="menulink" href="category-list.html">Categories</a></li>
+                          <li><a class="menulink" href="#">Areas</a></li>
+                          <li><a class="menulink" href="#">Discover weekly</a></li>
+                      </ul>
+                    </div>
+                <button><a class="menulink" href="about.html">About</a></button>
+                <button><a class="menulink" href="newsletter.html">Newsletter</a></button>
+            </ul>
+        </nav>
 
             <div class="hamburger">
                 <div class="line1"></div>
