--- a/category-list.html
+++ b/category-list.html
@@ -18,7 +18,7 @@
             <img src="img/logo.svg" alt="logo" class="logo">
 
             <nav class="menu">
-                <button><a class="menulink" href="index.html">Home</a></button>
+                <button class="navnutton"><a class="menulink" href="index.html">Home</a></button>
                 <div class="dropdown">
                         <button class="explore">Explore</button>
                         <ul>
@@ -27,8 +27,8 @@
                           <li><a class="menulink" href="#">Discover weekly</a></li>
                       </ul>
                     </div>
-                <button><a class="menulink" href="about.html">About</a></button>
-                <button><a class="menulink" href="newsletter.html">Newsletter</a></button>
+                <button class="navbutton"><a class="menulink" href="about.html">About</a></button>
+                <button class="navbutton"><a class="menulink" href="newsletter.html">Newsletter</a></button>
             </ul>
         </nav>
 
