--- a/article.html
+++ b/article.html
@@ -14,39 +14,20 @@
       <div class="menu-container">
         <img src="img/logo.svg" alt="logo" class="logo" />
 
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Explore</a></li>
-            <li><a href="category-list.html">Articles</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="newsletter.html">Newsletter</a></li>
-          </ul>
-        </nav>
-
-<<<<<<< HEAD
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-=======
-      <img src="img/logo.svg" alt="logo" class="logo">
-
-      <nav class="menu">
-        <button><a class="menulink" href="index.html">Home</a></button>
-        <div class="dropdown">
-                <button class="explore">Explore</button>
-                <ul>
-                  <li><a class="menulink" href="category-list.html">Categories</a></li>
-                  <li><a class="menulink" href="#">Areas</a></li>
-                  <li><a class="menulink" href="#">Discover weekly</a></li>
-              </ul>
-            </div>
-        <button><a class="menulink" href="about.html">About</a></button>
-        <button><a class="menulink" href="newsletter.html">Newsletter</a></button>
-    </ul>
-</nav>
+        <nav class="menu">
+          <button class="navbutton"><a class="menulink" href="index.html">Home</a></button>
+          <div class="dropdown">
+                  <button class="explore">Explore</button>
+                  <ul>
+                    <li><a class="menulink" href="category-list.html">Categories</a></li>
+                    <li><a class="menulink" href="#">Areas</a></li>
+                    <li><a class="menulink" href="#">Discover weekly</a></li>
+                </ul>
+              </div>
+          <button class="navbutton"><a class="menulink" href="about.html">About</a></button>
+          <button class="navbutton"><a class="menulink" href="newsletter.html">Newsletter</a></button>
+      </ul>
+  </nav>
 
       <div class="hamburger">
         <div class="line1"></div>
@@ -113,7 +94,6 @@
     <section class="card">
       <div class="img-container">
         <img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" />
->>>>>>> 84c1b1527c6719543130d88b8e710fc2964c14e6
       </div>
       <div class="header-img"></div>
       <div class="article-container">
