--- a/category-list.html
+++ b/category-list.html
@@ -18,7 +18,7 @@
             <img src="img/logo.svg" alt="logo" class="logo">
 
             <nav class="menu">
-                <button class="navnutton"><a class="menulink" href="index.html">Home</a></button>
+                <button class="navbutton"><a class="menulink" href="index.html">Home</a></button>
                 <div class="dropdown">
                         <button class="explore">Explore</button>
                         <ul>
