--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/map.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Home</title>
 </head>
 
@@ -46,73 +47,73 @@
             <p>Explore by</p>
             <button class="landing-btn selected" id="area-btn">Area</button>
             <button class="landing-btn unselected" id="category-btn">Category</button>
-            <section class="landing-category cards-grid hidden slider" id="lnd-cat">
-                <a href="article.html?q={&quot;Category&quot;: &quot;Must-see places&quot;}">
-                    <article class="category">
-                        <img src="img/mustsee.svg" alt="" class="categoryimage">
+            <section class="cards-grid hidden slider" id="lnd-cat">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Must-see places&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/mustsee.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Must-see places</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Instagrammable spots&quot;}">
-                    <article class="category">
-                        <img src="img/insta.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Instagrammable spots&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/insta.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Instagrammable spots</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Historial sights&quot;}">
-                    <article class="category">
-                        <img src="img/history.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Historial sights&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/history.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Historical sites</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Architecture objects&quot;}">
-                    <article class="category">
-                        <img src="img/architecture.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Architecture objects&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/architecture.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Architecture objects</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Museums&quot;}">
-                    <article class="category">
-                        <img src="img/museum.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Museums&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/museum.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Museums</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Parks and nature&quot;}">
-                    <article class="category">
-                        <img src="img/parks.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Parks and nature&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/parks.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Parks and nature</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Entertainment&quot;}">
-                    <article class="category">
-                        <img src="img/entertainment.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Entertainment&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/entertainment.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Entertainment</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Coffee shops&quot;}">
-                    <article class="category">
-                        <img src="img/coffee.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Coffee shops&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/coffee.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Coffee shops</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Bars and nightlife&quot;}">
-                    <article class="category">
-                        <img src="img/bars.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Bars and nightlife&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/bars.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Bars and nightlife</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Outdoor activities&quot;}">
-                    <article class="category">
-                        <img src="img/outdoor.svg" alt="" class="categoryimage">
+                <a href="article.html?q={&quot;Category&quot;: &quot;Outdoor activities&quot;}" class="article-card">
+                    <article class="ldn-card-cont">
+                        <div class="cat-img-cont"><img src="img/outdoor.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Outdoor activities</h2>
                     </article>
                 </a>
